# Benzinpreis-App

./: .gitattributes  .gitignore  LocationService.py  MapManager.py  StationDataFetcher.py  UIHelper.py  build.bat  main.py  mainWindow.py  pyproject.toml  readme.md  requirements.txt  run.sh
resources/env/: tankerkoenig.env
resources/map/: map.html
resources/stylesheets/: darkStyle.qss  lightStyle.qss
resources/ui/: mainWindow.ui
services/: FuelPriceDB.py  LocationService.py  StationDataFetcher.py
utils/: Daten_Hostory.py  History.py  MapManager.py  StatusLogger.py  UIHelper.py  path_utils.py
