[tool.poetry]
name = "benzinpreis-app"
version = "0.1.0"
description = "Bensinpreis App"
authors = ["Donald Kapyouo <dkapyouo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
pyqt6 = "^6.7.1"
requests = "^2.32.3"
geopy = "^2.4.1"
pyqt6-webengine = "^6.7.0"
folium = "^0.18.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
